# passive-impact

./: .gitignore  Cargo.toml  README.md  discovery.ipynb  pyproject.toml  reference_paper.tex
.github/workflows/: mirror-main.yml
bidask_python/: analysis.ipynb  plot_utils.py
code/python/: Cargo.toml  README.md  pyproject.toml
code/python/simproj/: __init__.py  _bidask.py  agressive_impact.py  passive_impact.py  point_process_simulation.py  queue_simulation.py
code/python/src/: lib.rs
code/python/tests/: test_agressive_impact_facade.py  test_conditional.py  test_hawkes.py  test_impact.py  test_impact_cost.py  test_passive_impact_facade.py  test_passive_parity.py  test_plot_utils_counterfactual.py  test_point_process_simulation.py  test_queue.py  test_queue_simulation_facade.py  test_skeleton.py
code/src/: Cargo.toml  lib.rs  main.rs
code/src/conditional_impact/: mod.rs  readme.md
code/src/conditional_impact/flow_imbalance_model/: README.md  mod.rs
code/src/conditional_impact/flow_imbalance_model/multi_queue/: bidask_impact.rs  mod.rs
code/src/conditional_impact/flow_imbalance_model/single_queue/: impact_path.rs
code/src/conditional_impact/impact_utils/: impact_factors.rs  mod.rs  propagator.rs  tail_intensity.rs
code/src/conditional_impact/propagator_model/: README.md  mod.rs
code/src/experiments/: mod.rs
code/src/experiments/impact_cost/: events.rs  execution.rs  execution_grid.rs  mod.rs  policies.rs
code/src/experiments/impact_cost/anchored/: conditional_simulator.rs  events.rs  mod.rs
code/src/models/hawkes/: hawkes_processes.rs  mod.rs
code/src/models/processes/: markovian_process.rs  mod.rs
code/src/models/queues/: mod.rs  multiqueue_processes.rs  queue_processes.rs
code/src/simulation/: README.md  conditional_simulator.rs  mod.rs  simulator.rs
code/src/simulation/conditional_simulator_extensions/: efficient.rs  mod.rs  multiple.rs
code/src/simulation_helpers/: mod.rs  rng.rs
code/src/simulation_helpers/multi_queue/: bidask_events.rs  bidask_runners.rs  mod.rs
code/src/simulation_helpers/single_queue/: events.rs  mod.rs  runners.rs
code/src/utils/: finite_difference.rs  ivt.rs  mod.rs  npy_io.rs
data/experiments/extreme_events/: metadata.txt
docs/superpowers/plans/: 2026-04-26-experiments-restructure.md
docs/superpowers/specs/: 2026-04-26-experiments-restructure-design.md
experiments/: __init__.py  plot_utils_common.py
experiments/_legacy/cancelation_race/: metadata.txt
experiments/_legacy/cancelation_race_notebook/: plot_utils.py  readme.md
experiments/_legacy/extreme_events_notebook/: plot_utils.py  readme.md
experiments/agressive_impact/: README.md
experiments/agressive_impact/custom_experiment/: README.md  main.py
experiments/agressive_impact/load_experiments/: README.md  analysis.ipynb  plot_utils.py  plot_utils_hybrid.py  plot_utils_propagator.py
experiments/impact_cost/: COMPONENTS.md  PROPAGATOR_INPUT_PASSIVE_NOTE.md  README.md  __init__.py
experiments/impact_cost/archive/: __init__.py
experiments/impact_cost/core/: __init__.py  anchored_simulator.py  cost_utils.py  empirical_lifecycle.py  experiment_utils.py  latency_filters.py  level_execution.py  passive_impact.py  passive_lifecycle.py  queue_replay.py  reduced_form_impact.py
experiments/impact_cost/data/: README.md
experiments/impact_cost/load_experiments/: FORMULAS.md  README.md  __init__.py  base_config.toml  config.toml  lifecycle_passive_cost.py  lifecycle_passive_cost_from_config.py  plot_utils.py  set_propagator_norm.py
experiments/impact_cost/pipelines/: __init__.py  execution_latency_grid.py  execution_overlay.py  impact_cost_pipeline.py  impact_series_pipeline.py  lifecycle_passive_cost_from_config.py  lifecycle_passive_cost_pipeline.py  queue_pipeline.py  reset_interval_fill_diagnostic.py  running_cost_diagnostics.py  scheduled_passive_cost_pipeline.py
experiments/impact_cost/references/: README.md
experiments/impact_cost/runs/: README.md
experiments/passive_impact/: README.md
experiments/passive_impact/custom_experiment/: README.md  main.py
experiments/passive_impact/load_experiments/: README.md  README_double.md  analysis.ipynb  plot_utils.py  plot_utils_double.py  plot_utils_single.py
experiments/point_process_simulation/: README.md
experiments/point_process_simulation/custom_experiment/: main.py  plot_utils.py
experiments/queue_simulation/: README.md
experiments/queue_simulation/custom_experiment/: README.md  main.py
experiments/queue_simulation/load_experiments/: analysis.ipynb  plot_utils.py
passive_impact_dev_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/: discovery.ipynb  plot_utils.py
python/experiments/agressive_impact/: README.md  plot_utils.py
python/experiments/agressive_impact_hybrid/: plot_utils.py
python/experiments/cancelation_race/: plot_utils.py  readme.md
python/experiments/double_queue_impact/: README.md  analysis.ipynb  plot_utils.py
python/experiments/extreme_events/: plot_utils.py  readme.md
python/experiments/market_orders/: readme.md
python/experiments/presentation/: plot_original_queue_illustration.py  plot_queue_illustration.py
python/experiments/single_queue_impact/: README.md  discovery.ipynb  plot_utils.py
src/: README.md  lib.rs  main.rs  rng.rs
src/conditional_impact/: impact_factors.rs  impact_path.rs  mod.rs  propagator.rs  readme.md  tail_intensity.rs
src/conditional_impact/impact_utils/: impact_factors.rs  propagator.rs  tail_intensity.rs
src/conditional_impact/multi_queue/: bidask_impact.rs
src/conditional_impact/propagator_model/: README.md  mod.rs
src/conditional_impact/single_queue/: impact_path.rs  mod.rs
src/models/: README.md  hawkes_processes.rs  markovian_process.rs  mod.rs  model.rs  multi_exponential.rs  queue.rs  queue_processes.rs
src/simulation/: README.md  conditional_queue_removal.rs  conditional_queue_simulator.rs  conditional_simulator.rs  mod.rs  queue_simulator.rs  simulator.rs  thinning.rs
src/simulation_helpers/: events.rs  mod.rs  runners.rs
src/utils/: README.md  ivt.rs  mod.rs  npy_io.rs
(+44 files in other folders)
