[package]
name = "simulation_project"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Leclere"]
description = "Refactored Passive Impact Simulation"
license = "MIT"
default-run = "simulation_project"


[lib]
name = "simulation_project"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core numerics
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"

# Parallelism
rayon = "1.10"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
