[package]
name = "simulation_project"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Leclere"]
description = "Refactored Passive Impact Simulation"
license = "MIT"
default-run = "simulation_project"


[lib]
name = "simulation_project"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core numerics
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"

# Parallelism
rayon = "1.10"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true

# Single queue binaries
[[bin]]
name = "single_queue_general_with_us"
path = "src/bin/single_queue/general/with_us.rs"

[[bin]]
name = "single_queue_general_without_us"
path = "src/bin/single_queue/general/without_us.rs"

[[bin]]
name = "single_queue_efficient_with_us"
path = "src/bin/single_queue/efficient/with_us.rs"

[[bin]]
name = "single_queue_efficient_without_us"
path = "src/bin/single_queue/efficient/without_us.rs"

# Double queue (bid-ask) binaries
[[bin]]
name = "double_queue_general_with_us"
path = "src/bin/double_queue/general/with_us.rs"

[[bin]]
name = "double_queue_general_without_us"
path = "src/bin/double_queue/general/without_us.rs"

[[bin]]
name = "double_queue_efficient_with_us"
path = "src/bin/double_queue/efficient/with_us.rs"

[[bin]]
name = "double_queue_efficient_without_us"
path = "src/bin/double_queue/efficient/without_us.rs"

# Experiments
[[bin]]
name = "extreme_events"
path = "src/bin/experiments/extreme_events.rs"

[[bin]]
name = "cancelation_race"
path = "src/bin/experiments/cancelation_race.rs"

[[bin]]
name = "metaorder_impact"
path = "src/bin/experiments/metaorder_impact.rs"

[[bin]]
name = "hawkes_example"
path = "src/bin/experiments/hawkes_example.rs"

# Aggressive impact
[[bin]]
name = "agressive_impact"
path = "src/bin/agressive_impact/main.rs"

# Comparative pricing models
[[bin]]
name = "comparative_pricing_models"
path = "src/bin/comparative_pricing_models/main.rs"

# Presentation
[[bin]]
name = "markovian_queue_illustration"
path = "src/bin/presentation/markovian_queue_illustration.rs"
