[project]
name = "passive-impact-dev-env"
version = "0.0.0"
description = "Top-level dev-environment manifest for the passive-impact simulation repo (not for distribution)."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=8",
    "jupyter>=1",
    "ipykernel>=6",
    "nbconvert>=7",
    "pyarrow>=14",
    "scipy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
