[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "simproj"
version = "0.1.0"
description = "Python bindings + facades for simulation_project"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[tool.maturin]
module-name = "simproj._native"
python-source = "."
features = ["pyo3/extension-module"]
